--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -1,4 +1,5 @@
 PORT="4000"
 NODE_ENV="development"
 BASE_URL="http://localhost:4000"
-DATABASE_URL="postgresql://postgres:123@localhost:5432/yt_clone_twitter?schema=public"
+DATABASE_URL=""
+SECRET=""
